superbitty/tests/ui/BitFieldCompatible/with_negative_discriminant.stderr
error: negative discriminants are not supported with `BitFieldCompatible`
 --> $DIR/with_negative_discriminant.rs:5:9
  |
5 |     A = -1,
  |         ^^
