superbitty/tests/ui/BitFieldCompatible/with_negative_discriminant.rs
use superbitty::BitFieldCompatible;

#[derive(BitFieldCompatible)]
enum WithNegativeDiscriminant {
    A = -1,
}

fn main() {}
